# electronics_platform

./: .env.sample  Docker-compose.yaml  Dockerfile  README.md  network.json  pyproject.toml
config/: settings.py  urls.py
network/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
network/migrations/: 0001_initial.py  0002_alter_product_supplier.py  0003_alter_supplier_options_alter_supplier_supplier.py
users/: admin.py  models.py  serializers.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
