[tool.poetry]
name = "electronics-platform"
version = "0.1.0"
description = ""
authors = ["Viktor Nikulaev <viktor_1611@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.1.0"
psycopg2-binary = "^2.9.10"
black = "^25.1.0"
django = "^5.1.6"
drf-yasg = "^1.21.8"
django-filter = "^24.3"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.4.0"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
